--- a/video-js.css
+++ b/video-js.css
@@ -4,7 +4,15 @@ body { background-color: #222; color: #fff; }
 
 /* General controls styles */
 .vjs-controls { display: none; list-style: none; margin: 0; padding: 0; position: absolute; height: 30px; opacity: 0.85; color: #fff; }
-.vjs-controls > li { list-style: none; float: left; height: 25px; width: 25px; margin: 0 5px 0 0; padding: 0; background-color: #001E25; text-align: center; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
+.vjs-controls > li { list-style: none; float: left; height: 25px; width: 25px; margin: 0 5px 0 0; padding: 0; text-align: center;
+  background: #001E25; border-radius: 5px;
+  /* Webkit */
+  -webkit-border-radius: 5px;
+  background: -webkit-gradient(linear, left 10, left bottom, from(#001E25), to(#000));
+  /* Mozilla */
+  -moz-border-radius: 5px;
+  background: -moz-linear-gradient(top,  #001E25,  #000); /* for firefox 3.6+ */
+}
 .vjs-controls > li:last-child { margin-right: 0; }
 .vjs-controls > li:first-child { margin-left: 5px; }
 
