Updated the VFE code. Reworked some of the listeners to be on the actual video element events. Added simple auto hiding.

--- a/video-js.css
+++ b/video-js.css
@@ -1,4 +1,4 @@
-.video-box { text-align: left; position: relative; }
+.video-js-box { text-align: left; position: relative; }
 .video-js { background-color: #000; }
 
 /* General controls styles */
