--- a/video-js.css
+++ b/video-js.css
@@ -1,5 +1,8 @@
 .video-js-box { text-align: left; position: relative; z-index: 1000; }
-.video-js { background-color: #000; }
+video.video-js { background-color: #000; }
+
+.video-js-box.vjs-fullscreen { position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; }
+.video-js-box.vjs-fullscreen video.video-js { position: absolute; width: 100%; height: 100%; }
 
 /* General controls styles */
 .vjs-controls { display: none; list-style: none; margin: 0; padding: 0; position: absolute; height: 30px; opacity: 0.85; color: #fff; }
@@ -14,6 +17,7 @@
   background: #1F3744 -moz-linear-gradient(top,  #0B151A,  #1F3744) left 12px;
   -moz-box-shadow: 0px 1px 3px #000; 
 }
+
 .vjs-controls > li:last-child { margin-right: 0; }
 .vjs-controls > li:first-child { margin-left: 5px; }
 
@@ -51,7 +55,7 @@
 .vjs-fullscreen-control ul li:nth-child(2) { border: none; border-top: 6px solid #fff; border-left: 6px solid #273F3E; }
 .vjs-fullscreen-control ul li:nth-child(3) { clear: both; margin: 0 3px 0 0; border: none; border-bottom: 6px solid #fff; border-right: 6px solid #112129; }
 .vjs-fullscreen-control ul li:nth-child(4) { border: none; border-bottom: 6px solid #fff; border-left: 6px solid #112129; }
-.vjs-fullscreen-control.vjs-fs-active ul li:nth-child(1) { border: none; border-bottom: 6px solid #fff; border-left: 6px solid #273F3E; }
-.vjs-fullscreen-control.vjs-fs-active ul li:nth-child(2) { border: none; border-bottom: 6px solid #fff; border-right: 6px solid #273F3E; }
-.vjs-fullscreen-control.vjs-fs-active ul li:nth-child(3) { border: none; border-top: 6px solid #fff; border-left: 6px solid #112129; }
-.vjs-fullscreen-control.vjs-fs-active ul li:nth-child(4) { border: none; border-top: 6px solid #fff; border-right: 6px solid #112129; }
+.vjs-fullscreen .vjs-fullscreen-control ul li:nth-child(1) { border: none; border-bottom: 6px solid #fff; border-left: 6px solid #273F3E; }
+.vjs-fullscreen .vjs-fullscreen-control ul li:nth-child(2) { border: none; border-bottom: 6px solid #fff; border-right: 6px solid #273F3E; }
+.vjs-fullscreen .vjs-fullscreen-control ul li:nth-child(3) { border: none; border-top: 6px solid #fff; border-left: 6px solid #112129; }
+.vjs-fullscreen .vjs-fullscreen-control ul li:nth-child(4) { border: none; border-top: 6px solid #fff; border-right: 6px solid #112129; }
