--- a/video-js.css
+++ b/video-js.css
@@ -4,8 +4,13 @@ video.video-js { background-color: #000; }
 .video-js-box.vjs-fullscreen { position: fixed; left: 0; top: 0; right: 0; bottom: 0; overflow: hidden; }
 .video-js-box.vjs-fullscreen video.video-js { position: absolute; width: 100%; height: 100%; }
 
+.vjs-controls { display: none; position: absolute; margin: 0; padding: 0; border: none; }
+
+/* DEFAULT SKIN */
+/* Using all CSS to draw the controls. Images could be used to simplify the CSS if desired.
+
 /* General controls styles */
-.vjs-controls { display: none; list-style: none; margin: 0; padding: 0; position: absolute; height: 30px; opacity: 0.85; color: #fff; }
+.vjs-controls { list-style: none; height: 30px; opacity: 0.85; color: #fff; }
 .vjs-controls > li { list-style: none; float: left; height: 25px; width: 25px; margin: 0 5px 0 0; padding: 0; text-align: center;
   background-color: #0B151A; border-radius: 5px; box-shadow: 0px 2px 2px #000;
   /* Webkit */
@@ -18,8 +23,8 @@ video.video-js { background-color: #000; }
   -moz-box-shadow: 0px 1px 3px #000; 
 }
 
-.vjs-controls > li:last-child { margin-right: 0; }
 .vjs-controls > li:first-child { margin-left: 5px; }
+.vjs-controls > li:last-child { margin-right: 0; }
 
 /* Play/Pause */
 .vjs-play-control span { display: block; font-size: 0px; line-height: 0; text-decoration: none; }
@@ -27,14 +32,13 @@ video.video-js { background-color: #000; }
 .vjs-play-control.vjs-pause span { width: 3px; height: 10px; margin: 8px auto 0; border-top: 0px; border-left: 3px solid #fff; border-bottom: 0px; border-right: 3px solid #fff; }
 
 /* Progress */
-.vjs-progress-control { width: 190px; }
 .vjs-progress-control ul { list-style: none; margin: 0; padding: 0; }
-.vjs-progress-control .vjs-progress-holder { list-style: none; position: relative; float: left; width: 100px; height: 9px; border: 1px solid #777; margin: 7px 0 0 5px; padding: 0; background-color: #112129; overflow:hidden; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
+.vjs-progress-control .vjs-progress-holder { list-style: none; position: relative; float: left; height: 9px; border: 1px solid #777; margin: 7px 0 0 5px; padding: 0; background-color: #112129; overflow:hidden; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
 .vjs-progress-control .vjs-play-progress { position: absolute; display: block; width: 0px; height: 9px; background: #fff; 
-    -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
-    background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#777));
-    background: -moz-linear-gradient(top,  #fff,  #777);
-    }
+  -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
+  background: -webkit-gradient(linear, left top, left bottom, from(#fff), to(#777));
+  background: -moz-linear-gradient(top,  #fff,  #777);
+}
 .vjs-progress-control .vjs-load-progress { position: absolute; display: block; width: 0px; height: 9px; background-color: #777; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
 .vjs-progress-control .vjs-progress-time { list-style: none; float: left; margin: 7px 0 0 5px; padding: 0; font-size: 10px; line-height: 1; font-weight: normal; font-family: Helvetica, Arial, sans-serif;  }
 
