--- a/video-js/video-js.css
+++ b/video-js/video-js.css
@@ -6,6 +6,9 @@ video.video-js { background-color: #000; }
 
 .vjs-controls { display: none; position: absolute; margin: 0; padding: 0; border: none; }
 
+img.vjs-poster { display: block; position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
+
+
 /* DEFAULT SKIN */
 /* Using all CSS to draw the controls. Images could be used to simplify the CSS if desired.
 
@@ -27,12 +30,12 @@ video.video-js { background-color: #000; }
 .vjs-controls > li:last-child { margin-right: 0; }
 
 /* Play/Pause */
-.vjs-play-control span { display: block; font-size: 0px; line-height: 0; text-decoration: none; }
+.vjs-play-control span { display: block; font-size: 0px; line-height: 0; text-decoration: none; cursor: pointer !important; }
 .vjs-play-control.vjs-play span { width: 0; height: 0; margin: 8px 0 0 8px; border-top: 5px solid #273F3E; border-left: 10px solid #fff; border-bottom: 5px solid #112129; }
 .vjs-play-control.vjs-pause span { width: 3px; height: 10px; margin: 8px auto 0; border-top: 0px; border-left: 3px solid #fff; border-bottom: 0px; border-right: 3px solid #fff; }
 
 /* Progress */
-.vjs-progress-control ul { list-style: none; margin: 0; padding: 0; }
+.vjs-progress-control ul { list-style: none; margin: 0; padding: 0; cursor: pointer !important; }
 .vjs-progress-control .vjs-progress-holder { list-style: none; position: relative; float: left; height: 9px; border: 1px solid #777; margin: 7px 0 0 5px; padding: 0; background-color: #112129; overflow:hidden; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
 .vjs-progress-control .vjs-play-progress { position: absolute; display: block; width: 0px; height: 9px; background: #fff; 
   -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px;
@@ -43,7 +46,7 @@ video.video-js { background-color: #000; }
 .vjs-progress-control .vjs-progress-time { list-style: none; float: left; margin: 7px 0 0 5px; padding: 0; font-size: 10px; line-height: 1; font-weight: normal; font-family: Helvetica, Arial, sans-serif;  }
 
 /* Volume */
-.vjs-volume-control { width: 50px !important; }
+.vjs-volume-control { width: 50px !important; cursor: pointer !important; }
 .vjs-volume-control ul { display: block; margin: 0; padding: 4px 0 0 5px; list-style: none; }
 .vjs-volume-control ul li { float: left; margin: 0; padding: 0; list-style: none; width: 5px; margin-right: 2px; height: 0px; border-bottom: 18px solid #555; }
 .vjs-volume-control ul li:nth-child(1) { border-bottom-width: 2px; height: 16px; }
@@ -53,7 +56,7 @@ video.video-js { background-color: #000; }
 .vjs-volume-control ul li:nth-child(5) { border-bottom-width: 14px; height: 4px; }
 
 /* Fullscreen */
-.vjs-fullscreen-control ul { list-style: none; margin: 5px 0 0 5px; padding: 0; width: 20px; height: 20px; text-align: left; vertical-align: top; }
+.vjs-fullscreen-control ul { list-style: none; margin: 5px 0 0 5px; padding: 0; width: 20px; height: 20px; text-align: left; vertical-align: top; cursor: pointer !important; }
 .vjs-fullscreen-control ul li { list-style: none; float: left; margin: 0; padding: 0; font-size: 0; line-height: 0; width: 0; text-align: left; vertical-align: top; }
 .vjs-fullscreen-control ul li:nth-child(1) { margin: 0 3px 3px 0; border: none; border-top: 6px solid #fff; border-right: 6px solid #273F3E; }
 .vjs-fullscreen-control ul li:nth-child(2) { border: none; border-top: 6px solid #fff; border-left: 6px solid #273F3E; }
