--- a/video-js.css
+++ b/video-js.css
@@ -1,4 +1,8 @@
-/* REQUIRED STYLES (be careful overriding)
+/* 
+VideoJS Default Styles (http://videojs.com)
+Version 1.1.3
+
+REQUIRED STYLES (be careful overriding)
 ================================================================================ */
 
 /* Box containing video, controls, and download links.
@@ -14,7 +18,7 @@ video.video-js { background-color: #000; position: relative; }
 .video-js-box.vjs-fullscreen ul.vjs-controls { z-index: 1002; }
 
 /* Poster Style */
-.video-js-box img.vjs-poster { display: block; position: absolute; left: 0; top: 0; width: 100%; height: 100%; margin: 0; }
+.video-js-box img.vjs-poster { display: block; position: absolute; left: 0; top: 0; width: 100%; height: 100%; margin: 0; cursor: pointer; }
 /* Subtiles Style */
 .video-js-box .vjs-subtitles { color:#fff; font-size: 20px; text-align: center; bottom: 20px; left: 0; right: 0; position: absolute; z-index: 1002; }
 
@@ -167,12 +171,11 @@ li.vjs-fullscreen-control ul li:nth-child(4) { border-bottom: 6px solid #fff; bo
 
 /* Big Play Button (at start)
 ---------------------------------------------------------*/
-div.vjs-big-play-button { 
+div.vjs-big-play-button {
   display: none; /* Start hidden */
   position: absolute; top: 50%; left: 50%; width: 80px; height: 80px; margin: -40px 0 0 -40px; z-index: 1003; text-align: center; vertical-align: center; cursor: pointer !important;
   border: 3px solid #fff; opacity: 0.9;
   border-radius: 20px; -webkit-border-radius: 20px; -moz-border-radius: 20px;
-  background-color: #333;
   
   /* CSS Background Gradients */
   /* Default */ background-color: #0B151A;
@@ -182,6 +185,10 @@ div.vjs-big-play-button {
   /* CSS Shadows */
   box-shadow: 4px 4px 8px #000; -webkit-box-shadow: 4px 4px 8px #000; -moz-box-shadow: 4px 4px 8px #000;
 }
+div.vjs-big-play-button:hover {
+  box-shadow: 0px 0px 80px #fff; -webkit-box-shadow: 0px 0px 80px #fff; -moz-box-shadow: 0px 0px 80px #fff;
+}
+
 div.vjs-big-play-button span {
   display: block; font-size: 0; line-height: 0;
   width: 0; height: 0; margin: 20px 0 0 23px;
