--- a/video-js.css
+++ b/video-js.css
@@ -21,7 +21,8 @@ video.video-js { background-color: #000; position: relative; }
 .video-js-box img.vjs-poster { display: block; position: absolute; left: 0; top: 0; width: 100%; height: 100%; margin: 0; cursor: pointer; }
 /* Subtiles Style */
 .video-js-box .vjs-subtitles { color:#fff; font-size: 20px; text-align: center; bottom: 20px; left: 0; right: 0; position: absolute; z-index: 1002; }
-
+/* Spinner Styles */
+.video-js-box .vjs-spinner { display: none; }
 
 /* DEFAULT SKIN (override in another file)
 ================================================================================
