--- a/skins/tube.css
+++ b/skins/tube.css
@@ -1,3 +1,8 @@
+/*
+VideoJS TubeCSS Skin (http://videojs.com)
+Version 1.1.5
+*/
+
 .tube-css ul.vjs-controls {
   opacity: 1; color: #000;
   height: 25px;
